--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,20 @@ body {
     border-radius: 50%;
     cursor: pointer;
 }
+.boton1 {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    background: rgba(255, 255, 255, 0);
+    border: none;
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
+
+
 
 .descimg {
     width: 20px;
@@ -126,3 +140,47 @@ body {
     cursor: pointer;
     font-weight: bold;
 }
+@media (max-width: 650px) {
+      body {
+        flex-direction: column;
+      }
+
+      .sidebar {
+        width: 100%;
+        height: auto;
+        padding: 10px;
+        z-index: 3;
+      }
+
+      .gallery {
+        padding: 10px;
+      }
+
+      .flexible {
+        justify-content: center;
+      }
+
+      .image-container {
+        width: 45%; /* más pequeñas */
+        height: auto;
+        aspect-ratio: 4 / 3;
+      }
+
+      .boton, .boton1 {
+        bottom: 10px;
+        right: 10px;
+      }
+         .sidebar {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+  }
+
+  .sidebar h2,
+  .sidebar ul,
+  .sidebar li,
+  .sidebar a {
+    font-size: 14px; /* 👈 Tamaño reducido del texto en móviles */
+  }
+    }
+ 
